# coug_fgo

./: .gitignore  .pre-commit-config.yaml  README.md  dependencies.repos
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: docker_ci.yml  ros2_ci.yml
coug_fgo/: CMakeLists.txt  LICENSE  package.xml
coug_fgo/config/: coug_fgo_params.yaml
coug_fgo/include/coug_fgo/: dvl_a50_twist_node.hpp  factor_graph_node.hpp  origin_manager_node.hpp
coug_fgo/include/coug_fgo/factors/: ahrs_factor.hpp  auv_dynamics_factor.hpp  constant_velocity_factor.hpp  depth_factor.hpp  dvl_factor.hpp  dvl_preintegrated_factor.hpp  gps_factor.hpp  mag_factor.hpp
coug_fgo/include/coug_fgo/utils/: conversion_utils.hpp  dvl_preintegrator.hpp  thread_safe_queue.hpp
coug_fgo/launch/: coug_fgo.launch.py
coug_fgo/params/: dvl_a50_twist_params.yaml  factor_graph_params.yaml  origin_manager_params.yaml
coug_fgo/src/: dvl_a50_twist_main.cpp  dvl_a50_twist_node.cpp  factor_graph_main.cpp  factor_graph_node.cpp  origin_manager_main.cpp  origin_manager_node.cpp
coug_fgo/test/: test_ahrs_factor.cpp  test_auv_dynamics_factor.cpp  test_constant_velocity_factor.cpp  test_conversion_utils.cpp  test_depth_factor.cpp  test_dvl_a50_twist_node.cpp  test_dvl_factor.cpp  test_dvl_preintegrated_factor.cpp  test_dvl_preintegrator.cpp  test_factor_graph_node.cpp  test_gps_factor.cpp  test_mag_factor.cpp  test_origin_manager_node.cpp  test_thread_safe_queue.cpp
coug_fgo_msgs/: CMakeLists.txt  package.xml
coug_fgo_msgs/msg/: GraphMetrics.msg
